src/client/styles/global.css
:root {
  --wa-color-yellow-95: #fffbeb;
  --wa-color-yellow-90: #fef08a;
  --wa-color-yellow-80: #fde047;
  --wa-color-yellow-70: #facc15;
  --wa-color-yellow-60: #eab308;
  --wa-color-yellow-50: #ca8a04;
  --wa-color-yellow-40: #a16207;
  --wa-color-yellow-30: #854d0e;
  --wa-color-yellow-20: #713f12;
  --wa-color-yellow-10: #451a03;
  --wa-color-yellow-05: #220d02;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

